fix logo alignment

--- a/wp-theme/infralab/style.css
+++ b/wp-theme/infralab/style.css
@@ -244,7 +244,7 @@ a {
 
 #footer img {
     width: 180px;
-    max-width: 20%;
+    max-width: 16%;
 }
 
 #canvas {
